Fixes docs build process

--- a/website/blog/2019-01-21-7.3.0.md
+++ b/website/blog/2019-01-21-7.3.0.md
@@ -45,7 +45,7 @@ You can test this new feature by adding `@babel/plugin-proposal-private-methods`
 
 Class private features support is almost complete! 
 
-<div style="margin: auto; width: fit-content">
+<div style={{margin: "auto",width: "fit-content"}}>
 
 | Class Private  | **Instance** | **Static** |
 |----------------|--------------|------------|
