--- a/website/blog/2019-09-05-7.6.0.md
+++ b/website/blog/2019-09-05-7.6.0.md
@@ -47,7 +47,7 @@ You can test this new feature by adding `@babel/plugin-proposal-private-methods`
 
 Class private features support is finally complete 🎉
 
-<div style="margin: auto; width: fit-content">
+<div style={{margin: "auto",width: "fit-content"}}>
 
 | Class Private  | **Instance** | **Static** |
 |----------------|--------------|------------|
@@ -57,7 +57,7 @@ Class private features support is finally complete 🎉
 
 </div>
 
-<div style="margin: auto; width: fit-content">
+<div style={{margin: "auto",width: "fit-content"}}>
 
 ![It's time to party!](https://media.giphy.com/media/3KC2jD2QcBOSc/source.gif)
 
