--- a/website/blog/2021-02-22-7.13.0.md
+++ b/website/blog/2021-02-22-7.13.0.md
@@ -24,7 +24,7 @@ You can read the full changelog on [GitHub](https://github.com/babel/babel/relea
 
 We have joined the "GitHub Sponsors for organizations" program, so you can now sponsor us directly through GitHub 😊.
 
-<iframe src="https://github.com/sponsors/babel/button" title="Sponsor Babel on GitHub" height="35" width="116" style="border: 0; margin: auto; display: block"></iframe>
+<iframe src="https://github.com/sponsors/babel/button" title="Sponsor Babel on GitHub" height="35" width="116" style={{border: "0", margin: "auto", display: "block"}}></iframe>
 
 These funds are used to support our team's (currently one full-time and three part-time maintainers) continued efforts in improving stability and developing new features.
 
@@ -39,7 +39,7 @@ We welcome donations from both individual and companies. If your company is inte
 `@babel/preset-env`'s `targets` option allows users to specify their target environments, automatically choosing which syntax to transform and what polyfills to inject. Since releasing `@babel/preset-env`, we've learned that plugins _themselves_ can also benefit from knowing your targets. Currently, this can a bit cumbersome, as you have to specify your targets twice (for example, if you are using our [new polyfill plugins](https://github.com/babel/babel-polyfills)). By introducing `targets` as a top level option, you now only have to specify your targets once:
 
 <table>
-<tbody style="width: 100%; display: table; table-layout: fixed;">
+<tbody style={{width: "100%", display: "table", tableLayout: "fixed"}}>
 <tr>
 <th>Old configuration</th>
 <th>New configuration</th>
@@ -100,7 +100,7 @@ To help fix these problems, we've added a new top level option to tell Babel whi
 For example, when transforming classes, Babel will generate this output by default:
 
 <table>
-<tbody style="width: 100%; display: table; table-layout: fixed;">
+<tbody style={{width: "100%", display: "table", tableLayout: "fixed"}}>
 <tr>
 <th>Input</th>
 <th>Output</th>
@@ -157,7 +157,7 @@ However, enabling the `noClassCalls` assumption tells Babel "I'm never trying to
 ```
 
 <table>
-<tbody style="width: 100%; display: table; table-layout: fixed;">
+<tbody style={{width: "100%", display: "table", tableLayout: "fixed"}}>
 <tr>
 <th>Input</th>
 <th>Output</th>
@@ -202,7 +202,7 @@ Thanks to a collaboration with [Bloomberg](https://www.techatbloomberg.com/), Ba
 The Babel plugin transforms records and tuples syntax using the global `Record` and `Tuple` functions:
 
 <table>
-<tbody style="width: 100%; display: table; table-layout: fixed;">
+<tbody style={{width: "100%", display: "table", tableLayout: "fixed"}}>
 <tr>
 <th>Input</th>
 <th>Output</th>
