--- a/website/blog/2016-09-28-6.16.0.md
+++ b/website/blog/2016-09-28-6.16.0.md
@@ -8,7 +8,7 @@ categories: announcements
 share_text: "6.16.0"
 ---
 
-<p style="text-align:center">
+<p style={{textAlign:"center"}}>
 Happy Birthday Babel 🎂 !
 </p>
 
@@ -17,7 +17,7 @@ Happy Birthday Babel 🎂 !
 <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Happy 2nd birthday <a href="https://twitter.com/babeljs">@babeljs</a></p>&mdash; Sebastian McKenzie (@sebmck) <a href="https://twitter.com/sebmck/status/781079584460697601">September 28, 2016</a></blockquote>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-<pre style="font: 10px/5px monospace;">
+<pre style={{font: "10px/5px monospace"}}>
 
                                       ```.```           ``````            ``````
                                      ````;````         ```:````          ```:````
